Bug 448564 - Two 'Uninstall or manage addons' options in the context menu of Kickoff
Summary: Two 'Uninstall or manage addons' options in the context menu of Kickoff
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-01-15 23:02 UTC by Patrick Silva
Modified: 2022-02-07 16:14 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.1
Sentry Crash Report:


Attachments
screenshot (130.17 KB, image/png)
2022-01-15 23:02 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-01-15 23:02:46 UTC
Created attachment 145516 [details]
screenshot

STEPS TO REPRODUCE
1. search for a KDE app
2. right-click on the app you have searched for
3. 

OBSERVED RESULT
Two 'Uninstall or manage addons' options in the context menu,
see the attached screenshot please.

EXPECTED RESULT
one 'Uninstall or manage addons' option in the context menu

SOFTWARE/OS VERSIONS
SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-01-20 21:59:06 UTC
Cannot reproduce with current git master; this must have been fixed with one of Alexander's recent patches that fixed things like this.
Comment 2 Patrick Silva 2022-02-03 13:13:34 UTC
Still an issue on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 3 Alexander Lohnau 2022-02-05 09:52:42 UTC
Confirmed, I will look into it.
Comment 4 Bug Janitor Service 2022-02-05 10:27:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1438
Comment 5 Nate Graham 2022-02-07 16:13:37 UTC
Git commit 7024a32824821f7ae76d811fcba08cc16b117aa0 by Nate Graham, on behalf of Alexander Lohnau.
Committed on 07/02/2022 at 16:07.
Pushed by ngraham into branch 'master'.

De-duplicate 'Uninstall or manage addons' option in the context menu of Kickoff

If we have multiple sources for the application, we end up with multiple entries.
This is not useful in any scenario, because the generated appstream URL
is exactly the same.

Consequently we should return from the function when we created the first action.

M  +4    -5    applets/kicker/plugin/actionlist.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/7024a32824821f7ae76d811fcba08cc16b117aa0
Comment 6 Nate Graham 2022-02-07 16:14:16 UTC
Git commit 31a4cdd835d99abb85899b3f1e6b30fb3fac8dc0 by Nate Graham, on behalf of Alexander Lohnau.
Committed on 07/02/2022 at 16:14.
Pushed by ngraham into branch 'Plasma/5.24'.

De-duplicate 'Uninstall or manage addons' option in the context menu of Kickoff

If we have multiple sources for the application, we end up with multiple entries.
This is not useful in any scenario, because the generated appstream URL
is exactly the same.

Consequently we should return from the function when we created the first action.


(cherry picked from commit 7024a32824821f7ae76d811fcba08cc16b117aa0)

M  +4    -5    applets/kicker/plugin/actionlist.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/31a4cdd835d99abb85899b3f1e6b30fb3fac8dc0