De-duplicate 'Uninstall or manage addons' option in the context menu of Kickoff

If we have multiple sources for the application, we end up with multiple entries.
This is not useful in any scenario, because the generated appstream URL
is exactly the same.

Consequently we should return from the function when we created the first action.

BUG: 448564